testdata/fixtures/env/negative/test_key_and_short.js
// must NOT fire: Stripe TEST key (not a live credential) and short/ordinary strings
const stripeKey = "sk_test_FAKEFAKEFAKE1234";
const mode = "production";
const version = "v2";
const requestId = "9fQ4cA2e78bZ1dY6fX3aP5cV0e9K4mW7"; // random but not a secret-named identifier
